--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elon Jump 🚀</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,500;0,700;1,300;1,500;1,700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div id="explanation">
-        <img src="" alt="ElonJump's logo">
-        <img src="" alt="Elon Musk's email to employees">
+        <img id="logo" src="./assets/images/elon-jump-logo.png" alt="ElonJump's logo">
+        <img id="email" src="./assets/images/elon-mail.png" alt="Elon Musk's email to employees">
         <div id="special-objects">
             <div>
                 <img src="" alt="bouncer icon">
@@ -21,22 +24,22 @@
                 <p>loren impsum</p>
             </div>
         </div>
-        <button id="start-btn"></button>
+        <button id="start-btn">START</button>
         <div id="arrow-keys">
             <img src="" alt="left arrow key">
             <img src="" alt="right arrow key">
         </div>
     </div>
     <div id="game-screen">
-        <canvas id="my-canvas" width="428" height="600" style="border: 1px solid red"></canvas>
+        <canvas id="my-canvas" width="428" height="600"></canvas>
     </div>
-    <script type="text/javascript" src="assets/js/models/traps.js"></script>
-    <script type="text/javascript" src="assets/js/models/bouncy.js"></script>
-    <script type="text/javascript" src="assets/js/models/platforms.js"></script>
-    <script type="text/javascript" src="assets/js/models/player.js"></script>
-    <script type="text/javascript" src="assets/js/models/background.js"></script>
-    <script type="text/javascript" src="assets/js/models/game.js"></script>
-    <script type="text/javascript" src="assets/js/constants.js"></script>
-    <script type="text/javascript" src="assets/js/index.js"></script>
+    <script type="text/javascript" src="./assets/js/models/traps.js"></script>
+    <script type="text/javascript" src="./assets/js/models/bouncy.js"></script>
+    <script type="text/javascript" src="./assets/js/models/platforms.js"></script>
+    <script type="text/javascript" src="./assets/js/models/player.js"></script>
+    <script type="text/javascript" src="./assets/js/models/background.js"></script>
+    <script type="text/javascript" src="./assets/js/models/game.js"></script>
+    <script type="text/javascript" src="./assets/js/constants.js"></script>
+    <script type="text/javascript" src="./assets/js/index.js"></script>
 </body>
 </html>
