add and style bouncy and wifi icons

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <img id="logo" src="./assets/images/elon-jump-logo.png" alt="ElonJump's logo">
         <img id="email" src="./assets/images/elon-mail.png" alt="Elon Musk's email to employees">
         <div id="special-objects">
-            <div>
-                <img src="" alt="bouncer icon">
-            <p>loren ipsum</p>
+            <div class="icons-div">
+                <img id="bouncy-icon" src="./assets/images/bouncy-icon.png" alt="bouncer icon">
+                <p>this makes you jump higher</p>
             </div>
-            <div>
-                <img src="" alt="wifi icon">
-                <p>loren impsum</p>
+            <div class="icons-div">
+                <img id="wifi-icon" src="./assets/images/wifi-icon.png" alt="wifi icon">
+                <p>this slow you down</p>
             </div>
         </div>
         <button id="start-btn">START</button>
