finish html and styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elon Jump 🚀</title>
+    <title>Elon 🚀Jump</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,17 +17,20 @@
         <div id="special-objects">
             <div class="icons-div">
                 <img id="bouncy-icon" src="./assets/images/bouncy-icon.png" alt="bouncer icon">
-                <p>this makes you jump higher</p>
+                <p>you jump higher</p>
             </div>
             <div class="icons-div">
                 <img id="wifi-icon" src="./assets/images/wifi-icon.png" alt="wifi icon">
-                <p>this slow you down</p>
+                <p>slows you down</p>
             </div>
         </div>
-        <button id="start-btn">START</button>
-        <div id="arrow-keys">
-            <img src="" alt="left arrow key">
-            <img src="" alt="right arrow key">
+        <button id="start-btn">play</button>
+        <div id="controls">
+            <div id="arrow-keys">
+                <img class="arrow-keys" src="./assets/images/left-key.png" alt="left arrow key">
+                <img class="arrow-keys" src="./assets/images/right-key.png" alt="right arrow key">
+            </div>
+            <p>use the left and right arrows to control the player</p>
         </div>
     </div>
     <div id="game-screen">
