add restart, share and scoreboard buttons

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </div>
     <div id="game-screen">
         <canvas id="my-canvas" width="428" height="600"></canvas>
+        <button class="gameover-btn hidden-btn" id="restart-btn">restart</button>
+        <button class="gameover-btn hidden-btn" id="share-btn">share</button>
+        <button class="gameover-btn hidden-btn" id="score-btn">add to scoreboard</button>
     </div>
     <script type="text/javascript" src="./assets/js/models/traps.js"></script>
     <script type="text/javascript" src="./assets/js/models/bouncy.js"></script>
