add restart and share funcionality

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <div id="game-screen">
         <canvas id="my-canvas" width="428" height="600"></canvas>
-        <button class="gameover-btn hidden-btn" id="restart-btn">restart</button>
-        <button class="gameover-btn hidden-btn" id="share-btn">share</button>
+        <button class="gameover-btn hidden-btn" id="restart-btn" onclick="window.location.href='https://vicentegarcya.github.io/elon-jump/'">restart</button>
+        <button class="gameover-btn hidden-btn" id="share-btn" onclick="javascript:window.open('https://wa.me/?text=Juega%20a%20ElonJump%20GRATIS%20https://vicentegarcya.github.io/elon-jump/', '_blank');">share</button>
         <button class="gameover-btn hidden-btn" id="score-btn">add to scoreboard</button>
     </div>
     <script type="text/javascript" src="./assets/js/models/traps.js"></script>
