add broken and mobile platforms

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     </div>
     <script type="text/javascript" src="./assets/js/models/traps.js"></script>
     <script type="text/javascript" src="./assets/js/models/bouncy.js"></script>
+    <script type="text/javascript" src="./assets/js/models/mobile-platforms.js"></script>
+    <script type="text/javascript" src="./assets/js/models/broken-platforms.js"></script>
     <script type="text/javascript" src="./assets/js/models/platforms.js"></script>
     <script type="text/javascript" src="./assets/js/models/player.js"></script>
     <script type="text/javascript" src="./assets/js/models/background.js"></script>
