add logic of local storage scores

--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
             Link
         </button>
         <p id="select-sprite-text">select a player and press the play button</p>
+
         <button class="gameover-btn hidden-btn" id="restart-btn" onclick="window.location.href='https://vicentegarcya.github.io/elon-jump/'">restart</button>
         <button class="gameover-btn hidden-btn" id="share-btn" onclick="javascript:window.open('https://wa.me/?text=Juega%20a%20ElonJump%20GRATIS%20https://vicentegarcya.github.io/elon-jump/', '_blank');">share</button>
+        <input id="input-name" class="hidden-btn" type="text" placeholder="Write your name" required>
         <button class="gameover-btn hidden-btn" id="score-btn">add to scoreboard</button>
+
+        <table class="non-displayed" id="scores-table">
+
+        </table>
     </div>
 
     <!--LOADING PAGE-->
