print table with names and scores

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <button class="gameover-btn hidden-btn" id="score-btn">add to scoreboard</button>
 
         <table class="non-displayed" id="scores-table">
-
+            <tr>
+                <th>Name</th>
+                <th>Score</th>
+            </tr>
         </table>
     </div>
 
