style score list and add close list button

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <th>Score</th>
             </tr>
         </table>
+        <button class="non-displayed" id="close-score-list">close</button>
     </div>
 
     <!--LOADING PAGE-->
