add sprite image to score list

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
         <table class="non-displayed" id="scores-table">
             <tr>
-                <th>Name</th>
-                <th>Score</th>
+                <th id="sprite-head">Player</th>
+                <th id="name-head">Name</th>
+                <th id="score-head">Score</th>
             </tr>
         </table>
         <button class="non-displayed" id="close-score-list">close</button>
