add turn off music funcionality and solve logo animation problem

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </tr>
         </table>
         <button class="non-displayed" id="close-score-list">close</button>
+
+        <button id="music-on" class="visible-btn"><img src="./assets/images/music-on.png" alt="music icon"></button>
+        <button id="music-off" class="hidden-btn"><img src="./assets/images/music-off.png" alt="music icon"></button>
+
     </div>
 
     <!--LOADING PAGE-->
