add aura and peach players

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
             <br>
             Link
         </button>
+        <button class="select-player-btn" id="aura-sprite">
+            <img class="sprites-front" src="./assets/images/aura-front-image.png" alt="red sprite">
+            <br>
+            Aura
+        </button>
+        <button class="select-player-btn" id="peach-sprite">
+            <img class="sprites-front" src="./assets/images/peach-front-image.png" alt="link sprite">
+            <br>
+            Peach
+        </button>
         <p id="select-sprite-text">select a player and press the play button</p>
 
         <button class="gameover-btn hidden-btn" id="restart-btn" onclick="window.location.href='https://vicentegarcya.github.io/elon-jump/'">restart</button>
