refactor buttons display funcionality

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </button>
         <p id="select-sprite-text">select a player and press the play button</p>
 
-        <button class="gameover-btn hidden-btn" id="restart-btn" onclick="window.location.href='https://vicentegarcya.github.io/elon-jump/'">restart</button>
-        <button class="gameover-btn hidden-btn" id="share-btn" onclick="javascript:window.open('https://wa.me/?text=Juega%20a%20ElonJump%20GRATIS%20https://vicentegarcya.github.io/elon-jump/', '_blank');">share</button>
-        <input id="input-name" class="hidden-btn" type="text" placeholder="Write your name" required>
-        <button class="gameover-btn hidden-btn" id="score-btn">add to scoreboard</button>
+        <button class="gameover-btn non-displayed" id="restart-btn" onclick="window.location.href='https://vicentegarcya.github.io/elon-jump/'">restart</button>
+        <button class="gameover-btn non-displayed" id="share-btn" onclick="javascript:window.open('https://wa.me/?text=Juega%20a%20ElonJump%20GRATIS%20https://vicentegarcya.github.io/elon-jump/', '_blank');">share</button>
+        <input id="input-name" class="non-displayed" type="text" placeholder="Write your name" required>
+        <button class="gameover-btn non-displayed" id="score-btn">add to scoreboard</button>
 
         <table class="non-displayed" id="scores-table">
             <tr>
@@ -76,8 +76,8 @@
         </table>
         <button class="non-displayed" id="close-score-list">close</button>
 
-        <button id="music-on" class="visible-btn"><img src="./assets/images/music-on.png" alt="music icon"></button>
-        <button id="music-off" class="hidden-btn"><img src="./assets/images/music-off.png" alt="music icon"></button>
+        <button id="music-on"><img src="./assets/images/music-on.png" alt="music icon"></button>
+        <button id="music-off" class="non-displayed"><img src="./assets/images/music-off.png" alt="music icon"></button>
 
     </div>
 
